[gd_scene load_steps=6 format=2]

[ext_resource path="res://Elements/UI/3.png" type="Texture" id=1]
[ext_resource path="res://Elements/UI/go.png" type="Texture" id=2]
[ext_resource path="res://Elements/UI/startUIBehavior.gd" type="Script" id=3]
[ext_resource path="res://Elements/UI/2.png" type="Texture" id=4]
[ext_resource path="res://Elements/UI/1.png" type="Texture" id=5]

[node name="StartUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
two = ExtResource( 4 )
one = ExtResource( 5 )

[node name="GoText" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -128.0
margin_right = 256.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 256, 128 )
texture = ExtResource( 2 )

[node name="NumberText" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 128, 128 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
